--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   screen_retriever: ^0.2.0
   sqlite3_flutter_libs: ^0.5.20
   window_manager: ^0.5.1
+  launch_at_startup: ^0.2.0
+  system_tray: ^2.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   build_runner: ^2.4.13
@@ -30,6 +33,9 @@ dev_dependencies:
 dependency_overrides:
   frontend_server_client: ^4.0.0
   build_runner_core: ^9.0.0
+  uuid: ^4.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
